@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon id="plugin.video.mihotstar"
        name="MiHotStar"
-       version="0.0.1"
+       version="0.0.2"
        provider-name="Zoobi">
     <requires>
         <import addon="xbmc.python" version="2.1.0"/>
